istio/sample django/node_deployment_istio.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  labels:
    app: nodeapp
    service: node-service
spec:
  selector:
    app: nodeapp
  ports:
    - name: http
      port: 8080
      targetPort: 3000 #80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app: nodeapp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
      version: v1
  template:
    metadata:
      labels:
        app: nodeapp
        version: v1
    spec:
      serviceAccountName: nodeapp-details
      containers:
        - name: nginx
          image: uday1kiran/todoapp:1.0 #nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000 #80
              name: nodeapp-port
          #securityContext:
          #runAsUser: 1000
          volumeMounts:
          - name: config-volume
            mountPath: /home/app/webapp/todowoo/.env
            subPath: .env
      volumes:
        - name: config-volume
          configMap:
            name: database-config #postgres
