istio/sample django/node-virtualservice_istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodeserver
spec:
  hosts:
    - "*"
  gateways:
    - node-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /admin
        - uri:
            exact: /login
      route:
        - destination:
            host: node-service
            port:
              number: 8080
